[package]
name = "node-network"
version = "0.1.0"
authors = ["bluesky711711 <bluesky711711@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enet = "0.2.3"
csv = "1.1"
rust-ini = "0.15"
hex = "0.4.2"
libc = "0.2"
chrono = "0.4"

secure-sign = { path = "../secure-sign" }

