[package]
name = "test-network"
version = "0.1.0"
authors = ["bluesky711711 <bluesky711711@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
hex = "0.4.2"
libc = "0.2"

node-network = { path = "../node-network" }
secure-sign = { path = "../secure-sign" }