[package]
name = "test-ui"
version = "0.1.0"
authors = ["bluesky711711 <bluesky711711@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = "0.3.1-alpha1"
lazy_static = "1.4.0"
registry = "0.0.2"

secure-sign = { path = "../secure-sign" }