[package]
name = "test-ui"
version = "0.1.0"
authors = ["bluesky711711 <bluesky711711@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod = { version = "0.55.0", features = ["glium", "winit"] }
find_folder = "0.3.0"
piston_window = "0.107.0"
rand = "0.7.3"
libc = "0.2"

node-network = { path = "../node-network" }